# chunkie

./: .travis.yml  CMakeLists.txt  LICENSE  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  giit.json  resolve.json  travis.yml  waf  wscript
.github/workflows/: cxx_mkspecs.yml  raspberry_pi.yml
docs/: conf.py  index.rst
docs/examples/: concatenate.rst  examples.rst  unequal_buffer.rst  zeropadded_buffers.rst
docs/user_api/: deserializer.rst  serializer.rst  user_api.rst
examples/: create_test_file_dump.cpp  file_segment_reassemble.cpp  message_segment_reassemble.cpp  object_serialize_deserialize.cpp  serialize_deserialize_concatenated_buffers.cpp  serialize_deserialize_unequal_buffers.cpp  serialize_deserialize_zeropadded_buffers.cpp  wscript_build
src/chunkie/: deserializer.hpp  serializer.hpp  wscript_build
src/chunkie/checksum/: checksum.cpp  checksum.hpp  checksum_generator.hpp  checksum_parser.hpp  crc32.hpp  crc32_generator.hpp
src/chunkie/file/: file_reassembler.cpp  file_reassembler.hpp  file_segment.cpp  file_segment.hpp  file_segmenter.cpp  file_segmenter.hpp
src/chunkie/message/: message_reassembler.hpp  message_segmenter.hpp
test/: chunkie_tests.cpp  test_dump  wscript_build
test/src/: test_checksum.cpp  test_chunkie.cpp  test_deserializer.cpp  test_file_segment_reassemble.cpp  test_message_segment_reassemble.cpp  test_message_segmenter.cpp  test_serializer.cpp  test_some.cpp
test/src/file/: test_file_segment.cpp
